apps/server/base/namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.33.2-standalone-strict/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: server
  labels:
    istio.io/dataplane-mode: ambient
