apps/server/base/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.33.2-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: pod
    spec:
      containers:
        - name: server
          image: ghcr.io/coinhub-uit/server:latest
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
          volumeMounts:
            - name: assets
              mountPath: /app/assets/uploads
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: pvc-assets
