apps/server/base/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.33.2-standalone-strict/service.json
apiVersion: v1
kind: Service
spec:
  selector:
    app: coinhub
  ports:
    - targetPort: 3001
      port: 3001
