apps/server/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - name: coinhub
      namespace: gateway
      sectionName: server-http
    - name: coinhub
      namespace: gateway
      sectionName: server-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: service
          port: 3001
